product section update