@@ -7,25 +7,159 @@ Write-Host "  KumaraPOS Installer Builder" -ForegroundColor Cyan
 Write-Host "=====================================" -ForegroundColor Cyan
 Write-Host ""
 
-# Configuration
-$JDK_PATH = "C:\Users\PM_User\.jdks\ms-21.0.7"
+# Configuration - Auto-detect JDK path
+Write-Host "[0/7] Detecting JDK installation..." -ForegroundColor Green
+
+function Find-JDK {
+    # Try multiple methods to find JDK 21
+    $candidates = @()
+    
+    # Method 1: Check JAVA_HOME environment variable
+    $javaHome = $env:JAVA_HOME
+    if ($javaHome -and (Test-Path "$javaHome\bin\jpackage.exe")) {
+        $candidates += $javaHome
+        Write-Host "  Found JDK via JAVA_HOME: $javaHome" -ForegroundColor Gray
+    }
+    
+    # Method 2: Check if jpackage is in PATH
+    $jpackageInPath = Get-Command jpackage.exe -ErrorAction SilentlyContinue
+    if ($jpackageInPath) {
+        $jpackageDir = Split-Path (Split-Path $jpackageInPath.Source -Parent) -Parent
+        if (Test-Path "$jpackageDir\bin\jpackage.exe") {
+            $candidates += $jpackageDir
+            Write-Host "  Found JDK via PATH: $jpackageDir" -ForegroundColor Gray
+        }
+    }
+    
+    # Method 3: Check common .jdks directory (IntelliJ IDEA, VS Code, etc.)
+    $userProfile = $env:USERPROFILE
+    if ($userProfile) {
+        $jdksDir = "$userProfile\.jdks"
+        if (Test-Path $jdksDir) {
+            $jdkDirs = Get-ChildItem $jdksDir -Directory -ErrorAction SilentlyContinue | 
+                       Where-Object { Test-Path "$($_.FullName)\bin\jpackage.exe" } |
+                       Sort-Object Name -Descending
+            foreach ($jdkDir in $jdkDirs) {
+                $candidates += $jdkDir.FullName
+                Write-Host "  Found JDK in .jdks: $($jdkDir.FullName)" -ForegroundColor Gray
+            }
+        }
+    }
+    
+    # Method 4: Check Program Files
+    $programFilesPaths = @(
+        "${env:ProgramFiles}\Java",
+        "${env:ProgramFiles(x86)}\Java",
+        "${env:ProgramFiles}\Eclipse Adoptium",
+        "${env:ProgramFiles}\Microsoft",
+        "${env:ProgramFiles}\Amazon Corretto"
+    )
+    foreach ($basePath in $programFilesPaths) {
+        if (Test-Path $basePath) {
+            $jdkDirs = Get-ChildItem $basePath -Directory -ErrorAction SilentlyContinue |
+                       Where-Object { Test-Path "$($_.FullName)\bin\jpackage.exe" } |
+                       Sort-Object Name -Descending
+            foreach ($jdkDir in $jdkDirs) {
+                $candidates += $jdkDir.FullName
+                Write-Host "  Found JDK in Program Files: $($jdkDir.FullName)" -ForegroundColor Gray
+            }
+        }
+    }
+    
+    # Method 5: Check for JDK 21 specifically (preferred version)
+    $jdk21 = $candidates | Where-Object { 
+        $javaExe = "$_\bin\java.exe"
+        if (Test-Path $javaExe) {
+            $version = & $javaExe -version 2>&1 | Select-String -Pattern "version `"(\d+)" | ForEach-Object { $_.Matches[0].Groups[1].Value }
+            return $version -eq "21"
+        }
+        return $false
+    } | Select-Object -First 1
+    
+    if ($jdk21) {
+        Write-Host "  Selected JDK 21: $jdk21" -ForegroundColor Green
+        return $jdk21
+    }
+    
+    # Fallback: Use first candidate found
+    if ($candidates.Count -gt 0) {
+        $selected = $candidates[0]
+        Write-Host "  Selected JDK: $selected" -ForegroundColor Yellow
+        Write-Host "  Warning: Not JDK 21, but will attempt to use it" -ForegroundColor Yellow
+        return $selected
+    }
+    
+    return $null
+}
+
+# Allow override via environment variable or parameter
+$JDK_PATH = $null
+if ($env:JDK_PATH -and (Test-Path "$env:JDK_PATH\bin\jpackage.exe")) {
+    $JDK_PATH = $env:JDK_PATH
+    Write-Host "  Using JDK from JDK_PATH environment variable: $JDK_PATH" -ForegroundColor Cyan
+} elseif ($args.Count -gt 0 -and (Test-Path "$($args[0])\bin\jpackage.exe")) {
+    $JDK_PATH = $args[0]
+    Write-Host "  Using JDK from command line argument: $JDK_PATH" -ForegroundColor Cyan
+} else {
+    $JDK_PATH = Find-JDK
+}
+
+if (-not $JDK_PATH) {
+    Write-Host ""
+    Write-Host "ERROR: Could not find JDK installation!" -ForegroundColor Red
+    Write-Host ""
+    Write-Host "Please do one of the following:" -ForegroundColor Yellow
+    Write-Host "  1. Set JAVA_HOME environment variable to your JDK path" -ForegroundColor White
+    Write-Host "  2. Add JDK bin directory to PATH" -ForegroundColor White
+    Write-Host "  3. Set JDK_PATH environment variable: `$env:JDK_PATH = 'C:\path\to\jdk'" -ForegroundColor White
+    Write-Host "  4. Pass JDK path as argument: .\deploy-installer.ps1 'C:\path\to\jdk'" -ForegroundColor White
+    Write-Host ""
+    Write-Host "Example:" -ForegroundColor Cyan
+    Write-Host "  `$env:JDK_PATH = 'C:\Users\YourName\.jdks\ms-21.0.7'" -ForegroundColor Gray
+    Write-Host "  .\deploy-installer.ps1" -ForegroundColor Gray
+    Write-Host ""
+    pause
+    exit 1
+}
+
+# Verify JDK has required tools
 $JPACKAGE = "$JDK_PATH\bin\jpackage.exe"
 $JLINK = "$JDK_PATH\bin\jlink.exe"
 $JAVA = "$JDK_PATH\bin\java.exe"
 
+if (-not (Test-Path $JPACKAGE)) {
+    Write-Host ""
+    Write-Host "ERROR: jpackage.exe not found at: $JPACKAGE" -ForegroundColor Red
+    Write-Host "This JDK may not have jpackage tool. JDK 14+ is required." -ForegroundColor Yellow
+    pause
+    exit 1
+}
+
+# Display JDK version
+if (Test-Path $JAVA) {
+    $javaVersion = & $JAVA -version 2>&1 | Select-String -Pattern "version `"([^`"]+)" | ForEach-Object { $_.Matches[0].Groups[1].Value }
+    Write-Host "  JDK Version: $javaVersion" -ForegroundColor Cyan
+}
+
+Write-Host "  JDK Path: $JDK_PATH" -ForegroundColor Green
+Write-Host ""
+
 # Step 1: Clean previous builds
-Write-Host "[1/5] Cleaning previous builds..." -ForegroundColor Green
+Write-Host "[1/7] Cleaning previous builds..." -ForegroundColor Green
 if (Test-Path installer_staging) {
     Remove-Item installer_staging -Recurse -Force
 }
 if (Test-Path "KumaraPOS-1.0.0.exe") {
     Remove-Item "KumaraPOS-1.0.0.exe" -Force
 }
+if (Test-Path "KumaraPOS") {
+    Remove-Item "KumaraPOS" -Recurse -Force
+}
 Write-Host "Cleanup complete!" -ForegroundColor Green
 Write-Host ""
 
 # Step 2: Build the application
-Write-Host "[2/5] Building application with Maven..." -ForegroundColor Green
+Write-Host "[2/7] Building application with Maven..." -ForegroundColor Green
 mvn clean package -DskipTests
 
 if ($LASTEXITCODE -ne 0) {
@@ -40,7 +174,7 @@ Write-Host "Build completed successfully!" -ForegroundColor Green
 Write-Host ""
 
 # Step 3: Find the JAR file
-Write-Host "[3/5] Looking for JAR file..." -ForegroundColor Green
+Write-Host "[3/7] Looking for JAR file..." -ForegroundColor Green
 
 # Try to find shaded JAR first, then fall back to regular JAR
 $jarFile = Get-ChildItem target\pos-shaded-*.jar -ErrorAction SilentlyContinue | Select-Object -First 1
@@ -68,7 +202,7 @@ Write-Host "Note: If JAR fails to run, check JavaFX dependencies are included." 
 Write-Host ""
 
 # Step 4: Verify JAR contains JavaFX dependencies
-Write-Host "[4/6] Verifying JAR contents..." -ForegroundColor Green
+Write-Host "[4/7] Verifying JAR contents..." -ForegroundColor Green
 
 # Check if JAR contains JavaFX dependencies (Spring Boot puts them in BOOT-INF/lib)
 $jarList = jar tf $jarFile.FullName 2>&1 | Select-String -Pattern "(javafx|BOOT-INF/lib)" | Select-Object -First 5
@@ -103,41 +237,135 @@ if (-not (Test-Path $JLINK)) {
     exit 1
 }
 
-# Create a custom runtime with essential Java modules
+# Create a comprehensive runtime with ALL modules required for Spring Boot 3.x + JavaFX
 # This runtime will be bundled with the installer so Java doesn't need to be pre-installed
-# Note: JavaFX is included as dependencies in the JAR, so we don't need to bundle JavaFX jmods
-Write-Host "Building custom Java runtime (JavaFX will be loaded from JAR dependencies)..." -ForegroundColor Cyan
+Write-Host "Building comprehensive Java runtime for maximum compatibility..." -ForegroundColor Cyan
+Write-Host "  Including all modules required for Spring Boot 3.x, JavaFX, and database connectivity..." -ForegroundColor Gray
 
 # Check if JavaFX jmods exist (they might not be in standard JDK)
 $javafxJmodsPath = "$JDK_PATH\jmods"
 $hasJavafxJmods = (Test-Path "$javafxJmodsPath\javafx.base.jmod") -or (Test-Path "$javafxJmodsPath\javafx.controls.jmod")
 
+# Function to check if a module exists in the JDK
+function Test-ModuleExists {
+    param([string]$moduleName)
+    $jmodFile = "$JDK_PATH\jmods\$moduleName.jmod"
+    return (Test-Path $jmodFile)
+}
+
+# Comprehensive module list for Spring Boot 3.x + JavaFX + Database + Security
+# This ensures maximum compatibility across all Windows versions
+# Note: java.lang.invoke is part of java.base, not a separate module
+$moduleList = @(
+    # Core Java modules
+    "java.base",
+    "java.desktop",
+    "java.logging",
+    "java.sql",
+    "java.xml",
+    "java.naming",
+    "java.security.jgss",
+    "java.security.sasl",
+    "java.prefs",
+    "java.management",
+    "java.instrument",
+    "java.compiler",
+    "java.scripting",  # Required for javax.script (JavaScript engine, etc.)
+    "jdk.unsupported",
+    "jdk.crypto.ec",
+    # Networking modules (required for Spring Boot)
+    "java.net.http",
+    "jdk.httpserver",
+    # Note: java.lang.invoke is part of java.base, not a separate module
+    # Serialization (required for Spring Boot)
+    "java.serialization",
+    # Charsets and encoding
+    "jdk.charsets",
+    # File system access
+    "jdk.zipfs"
+    # Note: jdk.incubator.vector is not a separate module in Java 21
+    # Vector API functionality is part of java.base
+)
+
+# Add JavaFX modules if available in JDK (optional - JavaFX is in JAR dependencies)
+if ($hasJavafxJmods) {
+    Write-Host "  Including JavaFX modules from JDK (optional - also in JAR)..." -ForegroundColor Gray
+    $moduleList += @("javafx.base", "javafx.controls", "javafx.fxml", "javafx.swing", "javafx.graphics", "javafx.media")
+}
+
+# Filter out modules that don't exist in the JDK
+Write-Host "  Validating modules..." -ForegroundColor Gray
+$modules = @()
+foreach ($module in $moduleList) {
+    if (Test-ModuleExists $module) {
+        $modules += $module
+        if ($module -eq "java.scripting") {
+            Write-Host "    [OK] java.scripting module found (required for JavaFX FXML)" -ForegroundColor Green
+        }
+    } else {
+        Write-Host "    Warning: Module $module not found, skipping..." -ForegroundColor Yellow
+        if ($module -eq "java.scripting") {
+            Write-Host "    ERROR: java.scripting is required but not found!" -ForegroundColor Red
+            Write-Host "    This will cause javax.script.Bindings errors." -ForegroundColor Red
+        }
+    }
+}
+
+# Verify java.scripting is included
+if ($modules -notcontains "java.scripting") {
+    Write-Host ""
+    Write-Host "ERROR: java.scripting module is required but not available!" -ForegroundColor Red
+    Write-Host "This module is needed for JavaFX FXML loading (javax.script.Bindings)." -ForegroundColor Yellow
+    Write-Host "Please use a JDK that includes the java.scripting module." -ForegroundColor Yellow
+    pause
+    exit 1
+}
+
+# Join modules into comma-separated string
+$modulesString = $modules -join ","
+
 $jlinkArgs = @(
     "--output", $runtimeDir,
     "--module-path", "$JDK_PATH\jmods",
-    "--add-modules", "java.base,java.desktop,java.logging,java.sql,java.xml,java.naming,java.security.jgss,java.security.sasl,jdk.unsupported",
+    "--add-modules", $modulesString,
     "--strip-debug",
     "--compress", "2",
     "--no-header-files",
     "--no-man-pages"
 )
 
-# Add JavaFX modules only if they exist in the JDK
-if ($hasJavafxJmods) {
-    Write-Host "  Including JavaFX modules from JDK..." -ForegroundColor Gray
-    $jlinkArgs += "--add-modules", "javafx.base,javafx.controls,javafx.fxml,javafx.swing"
-} else {
-    Write-Host "  JavaFX jmods not found in JDK - will use JavaFX from JAR dependencies" -ForegroundColor Yellow
-}
-
+Write-Host "  Creating runtime with $($modules.Count) modules..." -ForegroundColor Gray
 & $JLINK $jlinkArgs
 
 if ($LASTEXITCODE -ne 0) {
     Write-Host ""
     Write-Host "ERROR: Failed to create custom runtime!" -ForegroundColor Red
     Write-Host "Check the error messages above." -ForegroundColor Yellow
-    pause
-    exit 1
+    Write-Host ""
+    Write-Host "Trying with minimal module set..." -ForegroundColor Yellow
+    
+    # Fallback to minimal set if comprehensive set fails
+    # Note: java.scripting is required for JavaFX FXML loading (javax.script.Bindings)
+    $minimalModules = "java.base,java.desktop,java.logging,java.sql,java.xml,java.naming,java.security.jgss,java.security.sasl,java.scripting,jdk.unsupported,java.net.http,java.prefs"
+    $jlinkArgs = @(
+        "--output", $runtimeDir,
+        "--module-path", "$JDK_PATH\jmods",
+        "--add-modules", $minimalModules,
+        "--strip-debug",
+        "--compress", "2",
+        "--no-header-files",
+        "--no-man-pages"
+    )
+    
+    & $JLINK $jlinkArgs
+    
+    if ($LASTEXITCODE -ne 0) {
+        Write-Host "ERROR: Failed to create runtime even with minimal modules!" -ForegroundColor Red
+        pause
+        exit 1
+    } else {
+        Write-Host "Runtime created with minimal module set (may have limited compatibility)" -ForegroundColor Yellow
+    }
 }
 
 Write-Host "Custom runtime created successfully!" -ForegroundColor Green
@@ -154,8 +382,15 @@ if (-not (Test-Path installer_staging)) {
     mkdir installer_staging | Out-Null
 }
 Copy-Item $jarFile.FullName installer_staging\app.jar
+
+# Create logs directory for application logs
+if (-not (Test-Path "logs")) {
+    mkdir logs | Out-Null
+}
+
 Write-Host "Staging prepared!" -ForegroundColor Green
 Write-Host "  JAR copied to: installer_staging\app.jar" -ForegroundColor Gray
+Write-Host "  Logs directory created: logs\" -ForegroundColor Gray
 Write-Host ""
 
 # Step 7: Create installer with jpackage
@@ -172,13 +407,21 @@ if (-not (Test-Path $JPACKAGE)) {
 Write-Host "Using jpackage from: $JPACKAGE" -ForegroundColor Cyan
 Write-Host ""
 
+# Check if user wants console launcher (for debugging)
+$createConsoleLauncher = $false
+if ($args -contains "--console" -or $args -contains "-c") {
+    $createConsoleLauncher = $true
+    Write-Host "Creating console launcher (errors will be visible)..." -ForegroundColor Yellow
+}
+
 # Build jpackage command with bundled Java runtime
 # This creates a self-contained installer that works on any Windows PC without Java pre-installed
+# Enhanced with maximum compatibility options for all Windows versions
 $jpackageArgs = @(
     "--name", "KumaraPOS",
     "--app-version", "1.0.0",
     "--vendor", "Kumara Enterprises",
-    "--description", "Point of Sale System",
+    "--description", "Point of Sale System - Self Contained Installer",
     "--type", "exe",
     "--input", "installer_staging",
     "--main-jar", "app.jar",
@@ -187,23 +430,64 @@ $jpackageArgs = @(
     "--win-shortcut",
     "--win-menu",
     "--win-dir-chooser",
+    "--win-per-user-install"
+)
+
+# Add console launcher if requested (shows errors in console window)
+if ($createConsoleLauncher) {
+    $jpackageArgs += "--win-console"
+    Write-Host "  Note: Console launcher enabled - errors will be visible" -ForegroundColor Cyan
+}
+
+# Add Java options
+$jpackageArgs += @(
     "--java-options", "-Xmx1024m",
     "--java-options", "-Xms256m",
     "--java-options", "-Dfile.encoding=UTF-8",
     "--java-options", "-Djava.awt.headless=false",
+    "--java-options", "-Djava.net.useSystemProxies=true",
+    "--java-options", "-Duser.timezone=UTC",
     "--java-options", "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--java-options", "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+    "--java-options", "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--java-options", "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--java-options", "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--java-options", "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--java-options", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--java-options", "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
+    "--java-options", "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
+    "--java-options", "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
+    "--java-options", "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED",
+    "--java-options", "--add-exports=java.desktop/sun.awt=ALL-UNNAMED",
+    "--java-options", "--add-exports=java.desktop/sun.java2d=ALL-UNNAMED",
+    "--java-options", "-XX:+UseG1GC",
+    "--java-options", "-XX:MaxGCPauseMillis=200"
 )
 
+# Check Windows version for compatibility
+$osVersion = [System.Environment]::OSVersion.Version
+$isWindows10OrLater = ($osVersion.Major -ge 10)
+Write-Host "Detected Windows version: $($osVersion.Major).$($osVersion.Minor)" -ForegroundColor Cyan
+
+if (-not $isWindows10OrLater) {
+    Write-Host "WARNING: Windows 10 or later is recommended for best compatibility" -ForegroundColor Yellow
+}
+
+Write-Host ""
 Write-Host "Running jpackage with the following configuration:" -ForegroundColor Cyan
 Write-Host "  Main JAR: app.jar" -ForegroundColor White
 Write-Host "  Main Class: org.springframework.boot.loader.launch.JarLauncher (Spring Boot)" -ForegroundColor White
 Write-Host "  Start Class: com.devstack.pos.PosApplication" -ForegroundColor White
 Write-Host "  Runtime: Custom Java runtime (bundled - no Java installation required)" -ForegroundColor Green
-Write-Host "  Note: This installer will work on any Windows PC without Java pre-installed!" -ForegroundColor Green
+Write-Host '  Compatibility: Enhanced for all Windows 10/11 versions (64-bit)' -ForegroundColor Green
+Write-Host "  Java Options: Optimized for Spring Boot 3.x + JavaFX" -ForegroundColor Green
 Write-Host ""
 
-& $JPACKAGE $jpackageArgs
+# Run jpackage with error handling
+Write-Host "Creating installer (this may take several minutes)..." -ForegroundColor Yellow
+& $JPACKAGE $jpackageArgs 2>&1 | Tee-Object -Variable jpackageOutput
+
+# Check if there were warnings but it still succeeded
+$hasWarnings = $jpackageOutput | Select-String -Pattern "warning|WARNING" -Quiet
 
 if ($LASTEXITCODE -eq 0) {
     Write-Host ""
@@ -211,27 +495,89 @@ if ($LASTEXITCODE -eq 0) {
     Write-Host "     SUCCESS!" -ForegroundColor Green
     Write-Host "=====================================" -ForegroundColor Green
     Write-Host ""
-    Write-Host "Installer created: " -NoNewline
-    Write-Host "KumaraPOS-1.0.0.exe" -ForegroundColor Cyan
-    Write-Host "Location: " -NoNewline
-    Write-Host "$(Get-Location)" -ForegroundColor Yellow
-    Write-Host ""
-    Write-Host "File size: " -NoNewline
-    $fileSize = (Get-Item "KumaraPOS-1.0.0.exe").Length / 1MB
-    Write-Host "$([math]::Round($fileSize, 2)) MB" -ForegroundColor Cyan
-    Write-Host ""
-    Write-Host "You can now:" -ForegroundColor Green
-    Write-Host "  1. Test the installer by running KumaraPOS-1.0.0.exe" -ForegroundColor White
-    Write-Host "  2. Distribute this file to other Windows computers" -ForegroundColor White
-    Write-Host ""
-    Write-Host "IMPORTANT: This is a SELF-CONTAINED installer!" -ForegroundColor Green
-    Write-Host "  - No Java installation required on target computers" -ForegroundColor White
-    Write-Host "  - Works on any Windows 10/11 PC (64-bit)" -ForegroundColor White
-    Write-Host "  - Java runtime is bundled with the installer" -ForegroundColor White
-    Write-Host ""
-    Write-Host "NOTE: Logs are written to files in the logs/ directory." -ForegroundColor Yellow
-    Write-Host "      Use .\view-logs.ps1 to view logs in a separate window." -ForegroundColor Yellow
-    Write-Host ""
+    
+    $installerFile = "KumaraPOS-1.0.0.exe"
+    if (Test-Path $installerFile) {
+        Write-Host "Installer created: " -NoNewline
+        Write-Host $installerFile -ForegroundColor Cyan
+        Write-Host "Location: " -NoNewline
+        Write-Host "$(Get-Location)" -ForegroundColor Yellow
+        Write-Host ""
+        
+        $fileSize = (Get-Item $installerFile).Length / 1MB
+        Write-Host "File size: " -NoNewline
+        Write-Host "$([math]::Round($fileSize, 2)) MB" -ForegroundColor Cyan
+        Write-Host ""
+        
+        # Verify installer integrity
+        Write-Host "Verifying installer..." -ForegroundColor Cyan
+        $fileInfo = Get-Item $installerFile
+        if ($fileInfo.Length -gt 50MB) {
+            Write-Host "  Installer size looks good (contains bundled Java runtime)" -ForegroundColor Green
+        } else {
+            Write-Host "  WARNING: Installer seems small - may not contain runtime" -ForegroundColor Yellow
+        }
+        Write-Host ""
+        
+        Write-Host "You can now:" -ForegroundColor Green
+        $runCommand = ".\" + $installerFile
+        Write-Host "  1. Test the installer by running: $runCommand" -ForegroundColor White
+        Write-Host "  2. Distribute this file to other Windows computers" -ForegroundColor White
+        Write-Host ""
+        Write-Host "IMPORTANT: This is a SELF-CONTAINED installer!" -ForegroundColor Green
+        Write-Host "  - No Java installation required on target computers" -ForegroundColor White
+        Write-Host '  - Works on Windows 10/11 (64-bit) - all versions' -ForegroundColor White
+        Write-Host "  - Java runtime is bundled with the installer" -ForegroundColor White
+        Write-Host "  - Enhanced compatibility with all required Java modules" -ForegroundColor White
+        Write-Host "  - Optimized Java options for Spring Boot 3.x + JavaFX" -ForegroundColor White
+        Write-Host ""
+        
+        if ($hasWarnings) {
+            Write-Host "NOTE: Some warnings were detected but installer was created successfully." -ForegroundColor Yellow
+            Write-Host "      The installer should still work correctly." -ForegroundColor Yellow
+            Write-Host ""
+        }
+        
+        Write-Host "TROUBLESHOOTING:" -ForegroundColor Cyan
+        Write-Host '  If the installer does not run on some Windows versions:' -ForegroundColor White
+        Write-Host '  1. Ensure target PC is Windows 10/11 (64-bit)' -ForegroundColor Gray
+        Write-Host "  2. Run installer as Administrator if needed" -ForegroundColor Gray
+        Write-Host "  3. Check Windows Event Viewer for detailed errors" -ForegroundColor Gray
+        Write-Host '  4. Ensure antivirus is not blocking the installer' -ForegroundColor Gray
+        Write-Host "  5. Try creating a portable version (app-image) instead" -ForegroundColor Gray
+        Write-Host ""
+        Write-Host "OPTIONAL: Create portable version (app-image)?" -ForegroundColor Cyan
+        Write-Host '  A portable version does not require installation and may work better on some systems.' -ForegroundColor Gray
+        Write-Host "  To create it, run this script again with: .\deploy-installer.ps1 -Portable" -ForegroundColor Gray
+        Write-Host ""
+        Write-Host "DEBUGGING TOOLS:" -ForegroundColor Cyan
+        Write-Host '  If the .exe installer does not work or nothing happens when you click it:' -ForegroundColor White
+        Write-Host ""
+        Write-Host "  1. Recreate installer with console launcher (RECOMMENDED):" -ForegroundColor Yellow
+        Write-Host "     .\deploy-installer.ps1 --console" -ForegroundColor Gray
+        Write-Host "     (This creates an installer that shows errors in a console window)" -ForegroundColor DarkGray
+        Write-Host ""
+        Write-Host "  2. Test JAR before installing:" -ForegroundColor Yellow
+        Write-Host "     .\test-jar.ps1" -ForegroundColor Gray
+        Write-Host "     (This runs the JAR with visible console to see errors)" -ForegroundColor DarkGray
+        Write-Host ""
+        Write-Host "  3. After installation, run with console:" -ForegroundColor Yellow
+        Write-Host "     .\run-with-console.ps1" -ForegroundColor Gray
+        Write-Host "     (This runs the installed app with visible console window)" -ForegroundColor DarkGray
+        Write-Host ""
+        Write-Host "  4. View application logs:" -ForegroundColor Yellow
+        Write-Host "     .\view-app-logs.ps1" -ForegroundColor Gray
+        Write-Host "     (Shows log files from the installed application)" -ForegroundColor DarkGray
+        Write-Host ""
+        Write-Host "  5. Check Windows Event Viewer:" -ForegroundColor Yellow
+        Write-Host "     .\check-event-viewer.ps1" -ForegroundColor Gray
+        Write-Host "     (Checks Windows Event Viewer for errors)" -ForegroundColor DarkGray
+        Write-Host ""
+    } else {
+        Write-Host "WARNING: Installer file not found at expected location!" -ForegroundColor Yellow
+        Write-Host "Check the jpackage output above for details." -ForegroundColor Yellow
+        Write-Host ""
+    }
 } else {
     Write-Host ""
     Write-Host "=====================================" -ForegroundColor Red
@@ -239,7 +585,32 @@ if ($LASTEXITCODE -eq 0) {
     Write-Host "=====================================" -ForegroundColor Red
     Write-Host ""
     Write-Host "Installer creation failed!" -ForegroundColor Red
-    Write-Host "Check the error messages above." -ForegroundColor Yellow
+    Write-Host ""
+    Write-Host "Common issues and solutions:" -ForegroundColor Yellow
+    Write-Host "  1. Missing dependencies:" -ForegroundColor White
+    Write-Host "     - Ensure JDK 21 is properly installed" -ForegroundColor Gray
+    Write-Host "     - Verify jpackage.exe exists at: $JPACKAGE" -ForegroundColor Gray
+    Write-Host ""
+    Write-Host "  2. Runtime creation issues:" -ForegroundColor White
+    Write-Host "     - Check that jlink.exe exists at: $JLINK" -ForegroundColor Gray
+    Write-Host "     - Verify JDK jmods directory exists" -ForegroundColor Gray
+    Write-Host ""
+    Write-Host "  3. Windows-specific issues:" -ForegroundColor White
+    Write-Host "     - Run PowerShell as Administrator" -ForegroundColor Gray
+    Write-Host '     - Check antivirus is not blocking jpackage' -ForegroundColor Gray
+    Write-Host "     - Ensure sufficient disk space (need ~500MB free)" -ForegroundColor Gray
+    Write-Host ""
+    Write-Host "  4. Check the error messages above for specific details." -ForegroundColor Yellow
+    Write-Host ""
+    
+    # Try to provide more diagnostic info
+    if (Test-Path $runtimeDir) {
+        Write-Host "Runtime directory exists: $runtimeDir" -ForegroundColor Cyan
+        $runtimeSize = (Get-ChildItem $runtimeDir -Recurse -ErrorAction SilentlyContinue | Measure-Object -Property Length -Sum).Sum / 1MB
+        Write-Host "  Runtime size: $([math]::Round($runtimeSize, 2)) MB" -ForegroundColor Gray
+    } else {
+        Write-Host "Runtime directory missing - runtime creation may have failed" -ForegroundColor Red
+    }
     Write-Host ""
 }
 
